--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,17 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "appPort": 3000,
+  "forwardPorts": [3000],
   "features": {
-    "ghcr.io/devcontainers/features/node:1": {},
-    "ghcr.io/devcontainers-extra/features/autoenv:1": {},
-    "ghcr.io/devcontainers-extra/features/netlify-cli:1": {},
-    "ghcr.io/devcontainers-extra/features/vercel-cli:1": {},
-    "ghcr.io/devcontainers-extra/features/sanity-cli:1": {}
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "18",
+      "nvmVersion": "0.39"
+    },
+    "ghcr.io/devcontainers/features/sshd:1": {
+      "version":"latest"
+    },
+    "ghcr.io/devcontainers-extra/features/sanity-cli:1": {
+      "version": "3.17.0"
+    }
   }
 }
